[app] Update styles

--- a/app/src/main/res/layout/activity_crash_report.xml
+++ b/app/src/main/res/layout/activity_crash_report.xml
@@ -25,6 +25,7 @@
     android:clipChildren="false">
 
     <com.google.android.material.card.MaterialCardView
+        style="?materialCardViewElevatedStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
@@ -32,7 +33,6 @@
         android:minHeight="148dp"
         android:outlineAmbientShadowColor="@color/home_secondary_outline_ambient_shadow_color"
         android:outlineSpotShadowColor="@color/home_secondary_outline_spot_shadow_color"
-        app:cardCornerRadius="8dp"
         app:cardElevation="@dimen/home_secondary_elevation">
 
         <LinearLayout
