--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,6 +29,9 @@
     <color name="home_secondary_outline_ambient_shadow_color">@color/material_grey_500</color>
     <color name="home_secondary_outline_spot_shadow_color">@color/material_grey_300</color>
 
-    <color name="primary_card_primary_text">@color/abc_primary_text_material_dark</color>
-    <color name="primary_card_secondary_text">@color/abc_secondary_text_material_dark</color>
+    <color name="primary_text_material_inverse">@color/abc_primary_text_material_dark</color>
+    <color name="secondary_text_material_inverse">@color/abc_secondary_text_material_dark</color>
+
+    <color name="primary_text_material">@color/abc_primary_text_material_light</color>
+    <color name="secondary_text_material">@color/abc_secondary_text_material_light</color>
 </resources>
