--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,7 +27,8 @@
         <item name="colorSecondary">?colorPrimary</item>
         <item name="colorSecondaryVariant">?colorPrimary</item>
         <item name="colorOnSecondary">@android:color/white</item>
-        <item name="colorSurface">@android:color/white</item>
+        <item name="colorTertiary">?colorPrimary</item>
+        <item name="colorOnTertiary">@android:color/white</item>
         <item name="colorError">@color/material_red_500</item>
         <item name="colorNormal">@color/material_green_500</item>
         <item name="colorInstall">@color/material_blue_500</item>
@@ -49,7 +50,8 @@
         <item name="colorSecondary">?colorPrimary</item>
         <item name="colorSecondaryVariant">?colorPrimary</item>
         <item name="colorOnSecondary">@android:color/black</item>
-        <item name="colorSurface">@color/google_grey_900</item>
+        <item name="colorTertiary">?colorPrimary</item>
+        <item name="colorOnTertiary">@android:color/black</item>
         <item name="colorError">@color/material_red_200</item>
         <item name="colorNormal">@color/material_green_200</item>
         <item name="colorInstall">@color/material_blue_200</item>
@@ -92,12 +94,8 @@
 
     <style name="HomeCard.Secondary">
         <item name="cardElevation">@dimen/home_secondary_elevation</item>
-        <item name="android:outlineAmbientShadowColor" tools:targetApi="p">
-            @color/home_secondary_outline_ambient_shadow_color
-        </item>
-        <item name="android:outlineSpotShadowColor" tools:targetApi="p">
-            @color/home_secondary_outline_spot_shadow_color
-        </item>
+        <item name="android:outlineAmbientShadowColor" tools:targetApi="p">?attr/colorSurface</item>
+        <item name="android:outlineSpotShadowColor" tools:targetApi="p">?attr/colorSurface</item>
     </style>
 
     <style name="HomeCard.Tertiary">
