--- a/app/src/main/res/layout/fragment_pager.xml
+++ b/app/src/main/res/layout/fragment_pager.xml
@@ -68,8 +68,8 @@
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
         android:contentDescription="@string/add_module_to_user"
-        android:outlineAmbientShadowColor="?colorAccent"
-        android:outlineSpotShadowColor="?colorAccent"
+        android:outlineAmbientShadowColor="?colorContainer"
+        android:outlineSpotShadowColor="?colorContainer"
         android:src="@drawable/ic_baseline_add_24"
         android:visibility="invisible"
         app:layout_fitsSystemWindowsInsets="bottom" />
