--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,7 +17,7 @@
   ~ Copyright (C) 2021 LSPosed Contributors
   -->
 
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <style name="Base.AppTheme.Light" parent="Theme.Material.Light.LightStatusBar">
         <item name="android:statusBarColor">?android:colorBackground</item>
@@ -80,6 +80,7 @@
     </style>
 
     <style name="HomeCard" parent="Widget.Material3.CardView.Elevated">
+        <item name="android:stateListAnimator">@null</item>
         <item name="android:layout_marginHorizontal">16dp</item>
         <item name="android:layout_marginBottom">8dp</item>
         <item name="android:clickable">true</item>
@@ -92,14 +93,9 @@
         <item name="cardElevation">@dimen/home_primary_elevation</item>
     </style>
 
-    <style name="HomeCard.Secondary">
-        <item name="cardElevation">@dimen/home_secondary_elevation</item>
-        <item name="android:outlineAmbientShadowColor" tools:targetApi="p">?attr/colorSurface</item>
-        <item name="android:outlineSpotShadowColor" tools:targetApi="p">?attr/colorSurface</item>
-    </style>
+    <style name="HomeCard.Secondary" />
 
     <style name="HomeCard.Tertiary">
-        <item name="android:stateListAnimator">@null</item>
         <item name="cardBackgroundColor">@android:color/transparent</item>
         <item name="cardElevation">0dp</item>
     </style>
