--- a/app/src/main/res/values/colors_custom.xml
+++ b/app/src/main/res/values/colors_custom.xml
@@ -32,11 +32,12 @@
     <color name="material_green">@color/material_green_500</color>
     <color name="material_light_green">@color/material_light_green_500</color>
     <color name="material_lime">@color/material_lime_500</color>
-    <color name="material_yellow">#ff9ca8</color>
+    <color name="material_yellow">@color/material_yellow_500</color>
     <color name="material_amber">@color/material_amber_500</color>
     <color name="material_orange">@color/material_orange_500</color>
     <color name="material_deep_orange">@color/material_deep_orange_500</color>
     <color name="material_brown">@color/material_brown_500</color>
     <color name="material_grey">@color/material_grey_500</color>
     <color name="material_blue_grey">@color/material_blue_grey_500</color>
+    <color name="sakura">#ff9ca8</color>
 </resources>
