--- a/app/src/main/res/drawable/simple_menu_background.xml
+++ b/app/src/main/res/drawable/simple_menu_background.xml
@@ -1,4 +1,4 @@
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ This file is part of LSPosed.
   ~
   ~ LSPosed is free software: you can redistribute it and/or modify
@@ -14,19 +14,19 @@
   ~ You should have received a copy of the GNU General Public License
   ~ along with LSPosed.  If not, see <https://www.gnu.org/licenses/>.
   ~
-  ~ Copyright (C) 2020 EdXposed Contributors
   ~ Copyright (C) 2021 LSPosed Contributors
   -->
-
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:color="?colorControlHighlight"
-    tools:ignore="PrivateResource">
-
-    <item android:id="@android:id/mask">
-        <shape android:shape="rectangle">
-            <solid android:color="@android:color/white" />
-            <corners android:radius="8dp" />
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape>
+            <solid android:color="?attr/colorSurface"/>
+            <corners android:radius="?popupBackgroundRadius" />
         </shape>
     </item>
-</ripple>
+    <item>
+        <shape>
+            <solid android:color="@color/m3_popupmenu_overlay_color"/>
+            <corners android:radius="?popupBackgroundRadius" />
+        </shape>
+    </item>
+</layer-list>
