Add a switch to control adding shortcuts. (#1238)
* Add a switch to control adding shortcuts.

* Hide Shortcut Setting if it is unavailable

* Request a new shortcut when enabled

--- a/app/src/main/res/xml-v29/prefs.xml
+++ b/app/src/main/res/xml-v29/prefs.xml
@@ -35,8 +35,8 @@
             android:defaultValue="SYSTEM"
             android:entries="@array/language"
             android:icon="@drawable/ic_baseline_translate_24"
-            android:summary="%s"
             android:key="language"
+            android:summary="%s"
             android:title="@string/settings_language" />
 
         <Preference
@@ -92,6 +92,13 @@
             android:key="disable_verbose_log"
             android:persistent="false"
             android:title="@string/pref_title_disable_verbose_log" />
+
+        <SwitchPreference
+            android:defaultValue="false"
+            android:key="enable_auto_add_shortcut"
+            android:persistent="false"
+            android:summary="@string/settings_enable_auto_add_shortcut_summary"
+            android:title="@string/pref_title_enable_auto_add_shortcut" />
     </com.takisoft.preferencex.PreferenceCategory>
 
     <com.takisoft.preferencex.PreferenceCategory
