--- a/app/src/main/res/layout/preference_recyclerview.xml
+++ b/app/src/main/res/layout/preference_recyclerview.xml
@@ -26,12 +26,11 @@
     android:layout_height="match_parent"
     android:clipToPadding="false"
     android:fadeScrollbars="true"
-    android:paddingTop="?actionBarSize"
     android:scrollbarStyle="outsideOverlay"
     android:scrollbars="vertical"
     app:borderBottomVisibility="never"
     app:borderTopDrawable="@null"
     app:borderTopVisibility="whenTop"
-    app:fitsSystemWindowsInsets="bottom|top"
+    app:fitsSystemWindowsInsets="bottom"
     tools:ignore="UnusedResources"
     tools:viewBindingIgnore="true" />
