--- a/app/src/main/res/layout/preference_recyclerview.xml
+++ b/app/src/main/res/layout/preference_recyclerview.xml
@@ -26,7 +26,7 @@
     android:layout_height="match_parent"
     android:clipToPadding="false"
     android:fadeScrollbars="true"
-    android:scrollbarStyle="outsideOverlay"
+    android:scrollbarStyle="insideOverlay"
     android:scrollbars="vertical"
     app:borderBottomVisibility="never"
     app:borderTopDrawable="@null"
