--- a/app/src/main/res/layout/item_repo_recyclerview.xml
+++ b/app/src/main/res/layout/item_repo_recyclerview.xml
@@ -29,4 +29,4 @@
     app:borderTopVisibility="whenTop"
     app:borderTopDrawable="@null"
     app:borderBottomVisibility="never"
-    app:fitsSystemWindowsInsets="top|bottom" />
+    app:fitsSystemWindowsInsets="bottom" />
