--- a/app/src/main/res/layout/item_repo_readme.xml
+++ b/app/src/main/res/layout/item_repo_readme.xml
@@ -24,8 +24,7 @@
     android:layout_height="match_parent"
     android:clipToPadding="false"
     android:clipChildren="false"
-    android:paddingTop="104dp"
-    app:fitsSystemWindowsInsets="top|bottom">
+    app:fitsSystemWindowsInsets="bottom">
 
     <rikka.widget.borderview.BorderNestedScrollView
         android:id="@+id/scrollView"
